-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b122
-
Verified
hotspot/src/share/vm/runtime/thread.cpp:898), pid=23114, tid=23265
# fatal error: Thread holding lock at safepoint that vm can block on: Module_lock
#
Current thread (0xc4c47c00): JavaThread "MainThread" [_thread_in_vm, id=23265, stack(0xc542e000,0xc547f000)]
Stack: [0xc542e000,0xc547f000], sp=0xc547c520, free space=313k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x149f2a7] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137
V [libjvm.so+0x149ffa0] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30
V [libjvm.so+0x92a093] report_fatal(char const*, int, char const*, ...)+0x63
V [libjvm.so+0x13f6f7e] Thread::check_for_valid_safepoint_state(bool)+0x13e
V [libjvm.so+0x860670] CollectedHeap::check_for_valid_allocation_state()+0x60
V [libjvm.so+0xc3d65f] InstanceKlass::allocate_instance(Thread*)+0x3f
V [libjvm.so+0xc9c76e] java_lang_String::basic_create(int, bool, Thread*)+0x6e
V [libjvm.so+0xc9d121] java_lang_String::create_from_str(char const*, Thread*)+0x51
V [libjvm.so+0xa57094] Exceptions::new_exception(Thread*, Symbol*, char const*, Handle, Handle, Handle, Exceptions::ExceptionMsgToUtf8Mode)+0x154
V [libjvm.so+0xa5b275] Exceptions::_throw_msg(Thread*, char const*, int, Symbol*, char const*)+0xe5
V [libjvm.so+0x10d7f42] define_javabase_module(_jobject*, _jstring*, _jstring*, _jobjectArray*, Thread*)+0x1902
V [libjvm.so+0x10d89e7] Modules::define_module(_jobject*, _jstring*, _jstring*, _jobjectArray*, Thread*)+0x3a7
V [libjvm.so+0xdd033a] JVM_DefineModule+0xea
C [libjava.so+0xaf3b] Java_java_lang_reflect_Module_defineModule0+0x2b
j java.lang.reflect.Module.defineModule0(Ljava/lang/reflect/Module;Ljava/lang/String;Ljava/lang/String;[Ljava/lang/String;)V+0 java.base@9-internal
j java.lang.reflect.Module.<init>(Ljava/lang/reflect/Layer;Ljava/lang/ClassLoader;Ljava/lang/module/ModuleDescriptor;Ljava/net/URI;)V+139 java.base@9-internal
j java.lang.reflect.Module.defineModules(Ljava/lang/module/Configuration;Ljava/util/function/Function;Ljava/lang/reflect/Layer;)Ljava/util/Map;+140 java.base@9-internal
j java.lang.reflect.Layer.<init>(Ljava/lang/module/Configuration;Ljava/lang/reflect/Layer;Ljava/util/function/Function;)V+29 java.base@9-internal
j java.lang.reflect.Layer.defineModules(Ljava/lang/module/Configuration;Ljava/util/function/Function;)Ljava/lang/reflect/Layer;+38 java.base@9-internal
j BasicLayerTest.testLayerWithJavaBase()V+88
v ~StubRoutines::call_stub
V [libjvm.so+0xc88f29] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x759
V [libjvm.so+0x116c8c9] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*), JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x19
V [libjvm.so+0xc88290] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x40
V [libjvm.so+0x12825e2] invoke(instanceKlassHandle, methodHandle, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xb52
V [libjvm.so+0x1283615] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x205
V [libjvm.so+0xdecc51] JVM_InvokeMethod+0x1d1
C [libjava.so+0xb065] Java_jdk_internal_reflect_NativeMethodAccessorImpl_invoke0+0x25
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@9-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@9-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@9-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+42 java.base@9-internal
j org.testng.internal.MethodInvocationHelper.invokeMethod(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+242
j org.testng.internal.Invoker.invokeMethod([Ljava/lang/Object;ILorg/testng/ITestNGMethod;[Ljava/lang/Object;ILorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/ITestClass;[Lorg/testng/ITestNGMethod;[Lorg/testng/ITestNGMethod;Lorg/testng/internal/ConfigurationGroupMethods;)Lorg/testng/ITestResult;+292
j org.testng.internal.Invoker.invokeTestMethod([Ljava/lang/Object;Lorg/testng/ITestNGMethod;[Ljava/lang/Object;ILorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/ITestClass;[Lorg/testng/ITestNGMethod;[Lorg/testng/ITestNGMethod;Lorg/testng/internal/ConfigurationGroupMethods;)Ljava/util/List;+46
j org.testng.internal.Invoker.invokeTestMethods(Lorg/testng/ITestNGMethod;[Lorg/testng/ITestNGMethod;ILorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/internal/ConfigurationGroupMethods;[Ljava/lang/Object;Lorg/testng/ITestContext;)Ljava/util/List;+762
j org.testng.internal.TestMethodWorker.invokeTestMethods(Lorg/testng/ITestNGMethod;[Ljava/lang/Object;Lorg/testng/ITestContext;)V+32
j org.testng.internal.TestMethodWorker.run()V+60
j org.testng.TestRunner.privateRun(Lorg/testng/xml/XmlTest;)V+356
j org.testng.TestRunner.run()V+26
j org.testng.SuiteRunner.runTest(Lorg/testng/TestRunner;)V+1
j org.testng.SuiteRunner.runSequentially()V+31
j org.testng.SuiteRunner.privateRun()V+281
j org.testng.SuiteRunner.run()V+6
j org.testng.SuiteRunnerWorker.runSuite(Lorg/testng/internal/SuiteRunnerMap;Lorg/testng/xml/XmlSuite;)V+89
j org.testng.SuiteRunnerWorker.run()V+12
j org.testng.TestNG.runSuitesSequentially(Lorg/testng/xml/XmlSuite;Lorg/testng/internal/SuiteRunnerMap;ILjava/lang/String;)V+66
j org.testng.TestNG.runSuitesLocally()Ljava/util/List;+143
j org.testng.TestNG.run()V+77
j com.sun.javatest.regtest.TestNGAction$TestNGRunner.main(Ljava/lang/ClassLoader;[Ljava/lang/String;)V+256
j com.sun.javatest.regtest.TestNGAction$TestNGRunner.main([Ljava/lang/String;)V+2
v ~StubRoutines::call_stub
V [libjvm.so+0xc88f29] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x759
V [libjvm.so+0x116c8c9] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*), JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x19
V [libjvm.so+0xc88290] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x40
V [libjvm.so+0x12825e2] invoke(instanceKlassHandle, methodHandle, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xb52
V [libjvm.so+0x1283615] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x205
V [libjvm.so+0xdecc51] JVM_InvokeMethod+0x1d1
C [libjava.so+0xb065] Java_jdk_internal_reflect_NativeMethodAccessorImpl_invoke0+0x25
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@9-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@9-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@9-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+42 java.base@9-internal
j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+162
j java.lang.Thread.run()V+11 java.base@9-internal
v ~StubRoutines::call_stub
V [libjvm.so+0xc88f29] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x759
V [libjvm.so+0x116c8c9] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*), JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x19
V [libjvm.so+0xc86505] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x295
V [libjvm.so+0xc8670e] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0x8e
V [libjvm.so+0xdc3517] thread_entry(JavaThread*, Thread*)+0xa7
V [libjvm.so+0x1406e30] JavaThread::thread_main_inner()+0x220
V [libjvm.so+0x14070ef] JavaThread::run()+0x1ef
V [libjvm.so+0x116fed4] thread_native_entry(Thread*)+0x124
C [libpthread.so.0+0x6b5a] start_thread+0xca
C [libc.so.6+0xf7e1e] clone+0x5e
# fatal error: Thread holding lock at safepoint that vm can block on: Module_lock
#
Current thread (0xc4c47c00): JavaThread "MainThread" [_thread_in_vm, id=23265, stack(0xc542e000,0xc547f000)]
Stack: [0xc542e000,0xc547f000], sp=0xc547c520, free space=313k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x149f2a7] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137
V [libjvm.so+0x149ffa0] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30
V [libjvm.so+0x92a093] report_fatal(char const*, int, char const*, ...)+0x63
V [libjvm.so+0x13f6f7e] Thread::check_for_valid_safepoint_state(bool)+0x13e
V [libjvm.so+0x860670] CollectedHeap::check_for_valid_allocation_state()+0x60
V [libjvm.so+0xc3d65f] InstanceKlass::allocate_instance(Thread*)+0x3f
V [libjvm.so+0xc9c76e] java_lang_String::basic_create(int, bool, Thread*)+0x6e
V [libjvm.so+0xc9d121] java_lang_String::create_from_str(char const*, Thread*)+0x51
V [libjvm.so+0xa57094] Exceptions::new_exception(Thread*, Symbol*, char const*, Handle, Handle, Handle, Exceptions::ExceptionMsgToUtf8Mode)+0x154
V [libjvm.so+0xa5b275] Exceptions::_throw_msg(Thread*, char const*, int, Symbol*, char const*)+0xe5
V [libjvm.so+0x10d7f42] define_javabase_module(_jobject*, _jstring*, _jstring*, _jobjectArray*, Thread*)+0x1902
V [libjvm.so+0x10d89e7] Modules::define_module(_jobject*, _jstring*, _jstring*, _jobjectArray*, Thread*)+0x3a7
V [libjvm.so+0xdd033a] JVM_DefineModule+0xea
C [libjava.so+0xaf3b] Java_java_lang_reflect_Module_defineModule0+0x2b
j java.lang.reflect.Module.defineModule0(Ljava/lang/reflect/Module;Ljava/lang/String;Ljava/lang/String;[Ljava/lang/String;)V+0 java.base@9-internal
j java.lang.reflect.Module.<init>(Ljava/lang/reflect/Layer;Ljava/lang/ClassLoader;Ljava/lang/module/ModuleDescriptor;Ljava/net/URI;)V+139 java.base@9-internal
j java.lang.reflect.Module.defineModules(Ljava/lang/module/Configuration;Ljava/util/function/Function;Ljava/lang/reflect/Layer;)Ljava/util/Map;+140 java.base@9-internal
j java.lang.reflect.Layer.<init>(Ljava/lang/module/Configuration;Ljava/lang/reflect/Layer;Ljava/util/function/Function;)V+29 java.base@9-internal
j java.lang.reflect.Layer.defineModules(Ljava/lang/module/Configuration;Ljava/util/function/Function;)Ljava/lang/reflect/Layer;+38 java.base@9-internal
j BasicLayerTest.testLayerWithJavaBase()V+88
v ~StubRoutines::call_stub
V [libjvm.so+0xc88f29] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x759
V [libjvm.so+0x116c8c9] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*), JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x19
V [libjvm.so+0xc88290] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x40
V [libjvm.so+0x12825e2] invoke(instanceKlassHandle, methodHandle, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xb52
V [libjvm.so+0x1283615] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x205
V [libjvm.so+0xdecc51] JVM_InvokeMethod+0x1d1
C [libjava.so+0xb065] Java_jdk_internal_reflect_NativeMethodAccessorImpl_invoke0+0x25
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@9-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@9-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@9-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+42 java.base@9-internal
j org.testng.internal.MethodInvocationHelper.invokeMethod(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+242
j org.testng.internal.Invoker.invokeMethod([Ljava/lang/Object;ILorg/testng/ITestNGMethod;[Ljava/lang/Object;ILorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/ITestClass;[Lorg/testng/ITestNGMethod;[Lorg/testng/ITestNGMethod;Lorg/testng/internal/ConfigurationGroupMethods;)Lorg/testng/ITestResult;+292
j org.testng.internal.Invoker.invokeTestMethod([Ljava/lang/Object;Lorg/testng/ITestNGMethod;[Ljava/lang/Object;ILorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/ITestClass;[Lorg/testng/ITestNGMethod;[Lorg/testng/ITestNGMethod;Lorg/testng/internal/ConfigurationGroupMethods;)Ljava/util/List;+46
j org.testng.internal.Invoker.invokeTestMethods(Lorg/testng/ITestNGMethod;[Lorg/testng/ITestNGMethod;ILorg/testng/xml/XmlSuite;Ljava/util/Map;Lorg/testng/internal/ConfigurationGroupMethods;[Ljava/lang/Object;Lorg/testng/ITestContext;)Ljava/util/List;+762
j org.testng.internal.TestMethodWorker.invokeTestMethods(Lorg/testng/ITestNGMethod;[Ljava/lang/Object;Lorg/testng/ITestContext;)V+32
j org.testng.internal.TestMethodWorker.run()V+60
j org.testng.TestRunner.privateRun(Lorg/testng/xml/XmlTest;)V+356
j org.testng.TestRunner.run()V+26
j org.testng.SuiteRunner.runTest(Lorg/testng/TestRunner;)V+1
j org.testng.SuiteRunner.runSequentially()V+31
j org.testng.SuiteRunner.privateRun()V+281
j org.testng.SuiteRunner.run()V+6
j org.testng.SuiteRunnerWorker.runSuite(Lorg/testng/internal/SuiteRunnerMap;Lorg/testng/xml/XmlSuite;)V+89
j org.testng.SuiteRunnerWorker.run()V+12
j org.testng.TestNG.runSuitesSequentially(Lorg/testng/xml/XmlSuite;Lorg/testng/internal/SuiteRunnerMap;ILjava/lang/String;)V+66
j org.testng.TestNG.runSuitesLocally()Ljava/util/List;+143
j org.testng.TestNG.run()V+77
j com.sun.javatest.regtest.TestNGAction$TestNGRunner.main(Ljava/lang/ClassLoader;[Ljava/lang/String;)V+256
j com.sun.javatest.regtest.TestNGAction$TestNGRunner.main([Ljava/lang/String;)V+2
v ~StubRoutines::call_stub
V [libjvm.so+0xc88f29] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x759
V [libjvm.so+0x116c8c9] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*), JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x19
V [libjvm.so+0xc88290] JavaCalls::call(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x40
V [libjvm.so+0x12825e2] invoke(instanceKlassHandle, methodHandle, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xb52
V [libjvm.so+0x1283615] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x205
V [libjvm.so+0xdecc51] JVM_InvokeMethod+0x1d1
C [libjava.so+0xb065] Java_jdk_internal_reflect_NativeMethodAccessorImpl_invoke0+0x25
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@9-internal
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@9-internal
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@9-internal
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+42 java.base@9-internal
j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+162
j java.lang.Thread.run()V+11 java.base@9-internal
v ~StubRoutines::call_stub
V [libjvm.so+0xc88f29] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x759
V [libjvm.so+0x116c8c9] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*), JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x19
V [libjvm.so+0xc86505] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x295
V [libjvm.so+0xc8670e] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0x8e
V [libjvm.so+0xdc3517] thread_entry(JavaThread*, Thread*)+0xa7
V [libjvm.so+0x1406e30] JavaThread::thread_main_inner()+0x220
V [libjvm.so+0x14070ef] JavaThread::run()+0x1ef
V [libjvm.so+0x116fed4] thread_native_entry(Thread*)+0x124
C [libpthread.so.0+0x6b5a] start_thread+0xca
C [libc.so.6+0xf7e1e] clone+0x5e