8158060: BasicLayerTest causes fatal error: Thread holding lock at safepoint that vm can block on: Module_lock

Move the exception throw outside of the block containing the lock

Reviewed-by: dholmes, kbarrett, lfoltan